# customVpn

./: .gitignore  .vpn_keys  CHANGELOG.md  DEPLOYMENT_GUIDE.md  HOW_TO_USE.md  README.md  config.env.template  deploy-cloudflare.sh  deploy.sh  docker-compose-cloudflare.yml  docker-compose.yml  generate_client_config.py  pyproject.toml  pytest.ini  run_integration_tests.sh  setup_vps.sh
coreV2/: .gitignore  CHANGELOG_V2.md  SESSION_HANDOFF.md  TASKS_V2.md  deploy.py  deploy_local.py  requirements.txt
coreV2/configs/: docker-compose.yml  index.html  nginx.conf.j2  shadowsocks.json.j2  xray.json.j2
coreV2/scripts/: client_config.py  config_generator.py  deployer.py  uploader.py  verifier.py
docker/shadowsocks/: Dockerfile
docker/xray/: .dockerignore  Dockerfile  config-cloudflare.json
scripts/bash/: harden_ssh.sh  health_check.sh  setup_cron.sh  setup_fail2ban.sh  setup_firewall.sh  setup_vps.sh
scripts/python/: client_config_generator.py  config_generator.py  health_monitor.py  key_generator.py  s3_backup.py  setup_vpn.py  (+2 more)
templates/: client-config.json.j2  client-shadowsocks-share.j2  client-vless-share.j2  shadowsocks-config.json.j2  xray-config.json.j2
tests/: test_client_config_generator.py  test_config_generator.py  test_deployment.py  test_docker_compose.py  test_docker_integration.py  test_docker_shadowsocks.py  test_docker_xray.py  test_health_monitor.py  test_key_generator.py  test_s3_backup.py  test_security_scripts.py  test_structure.py  test_telegram_notifier.py  test_terraform.py  test_user_config_integration.py  test_user_manager.py
(+7 files in other folders)
