[project]
name = "customvpn"
version = "0.1.0"
description = "Secure VPN solution for bypassing GFW"
authors = [
    {name = "shenpeng"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jinja2 (>=3.1.4,<4.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "boto3 (>=1.35.36,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "qrcode (>=7.4.2,<8.0.0)",
    "pillow (>=10.4.0,<11.0.0)",
    "cryptography (>=43.0.1,<44.0.0)",
    "click (>=8.1.7,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"
testcontainers = {extras = ["docker"], version = "^4.13.3"}

